--- a/admin.html
+++ b/admin.html
@@ -24,19 +24,17 @@
               <a href="#" class="nav-link">Dashboard</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Users</a>
+              <a href="users.html" class="nav-link">Users</a>
+            </li>
+           
+            <li class="nav-item">
+              <a href="bookings.html" class="nav-link">Bookings</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Packages</a>
+              <a href="reports.html" class="nav-link">Reports</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Bookings</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link">Reports</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link">Settings</a>
+              <a href="settings.html" class="nav-link">Settings</a>
             </li>
             <li class="nav-item">
               <a href="#" class="nav-link">Logout</a>
